--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<p>全新地图
-klue短程速跑114514
-震撼来袭
-开服就送超级klue
-还有七天礼包
-我已经领到了
-快点击下方下载链接下载吧</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            CubeRunner Maps
+        </title>
+    </head>
+    <body>
+        <h1 style="text-align: left;">
+            About us
+        </h1>
+        <p1>
+            CubeRunner Studio is a team that mainly creates minecraft parkour maps, consisting of several Chinese map makers.
+            <br><br>
+            We've been creating parkour maps such as <i>The Parkour Island</i>, <i> Parkour Cubes</i> and more fun things!
+        </p1>
+    </body>
+</html>
